# learn-agent-harness

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README-zh.md  README.md
.codex/skills/rust-anyhow-source-study/: SKILL.md
.codex/skills/rust-anyhow-source-study/agents/: openai.yaml
docs/en/: 00-harness-mental-model.md  01-reading-map.md  02-rust-rewrite-plan.md  03-advice-review.md
docs/en/notes/: TEMPLATE.md
docs/zh/: 00-harness-mental-model.md  01-reading-map.md  02-rust-rewrite-plan.md  03-advice-review.md
docs/zh/notes/: TEMPLATE.md
learn-anyhow/: 01-box-dyn-error.md  02-main-error-printing.md  Cargo.toml  config.toml
learn-anyhow/examples/: 02-main-error-printing.rs  mini-anyhow.rs
learn-anyhow/src/: lib.rs
pi-rs/: Cargo.toml  README-zh.md  README.md
pi-rs/s01_agent_loop/: .env.example  BUILD_GUIDE.md  Cargo.toml  README-zh.md  README.md
pi-rs/s01_agent_loop/src/: main.rs
rust-course/: Cargo.toml  README.md
rust-course/src/: lib.rs
